# remesh_skp_files

./: CMakeLists.txt  main.cpp  primitives.h  texture_mapping.cpp  texture_mapping.h
sketchup/: AttributeDictionary.cpp  CMakeLists.txt  Curve.cpp  Edge.cpp  Entities.cpp  Entity.cpp  Face.cpp  Loop.cpp  LoopInput.cpp  MeshHelper.cpp  MeshHelper.hpp  Model.cpp  Sketchup.hpp  String.cpp  Transformation.cpp  TypedValue.cpp
